--- a/PA2/PA2style.css
+++ b/PA2/PA2style.css
@@ -12,6 +12,14 @@ p
 
 iframe
 {
-    width: 720;
-    height: 1280;
+    width: 720px;
+    height: 400px;
+    border: none;
+} 
+
+pic1
+{
+    width: 720px;
+    height: 400px;
+    border-radius: 50%;
 }
