--- a/PA2/PA2style.css
+++ b/PA2/PA2style.css
@@ -16,10 +16,7 @@ iframe
     height: 400px;
     border: none;
 } 
-
-pic1
+subcontent
 {
-    width: 720px;
-    height: 400px;
-    
+    align-items:  center;
 }
