--- a/PA2/PA2style.css
+++ b/PA2/PA2style.css
@@ -16,7 +16,20 @@ iframe
     height: 400px;
     border: none;
 } 
-subcontent
+
+.pic3
 {
-    align-items:  center;
+    width: 500px;
+    height: 400px;
+}
+
+.treasures
+{
+    width: 720px;
+    height: 400px;
+}
+
+.col-sm-8
+{
+    flex-wrap: wrap;
 }
